# AlmondVoxel

./: .gitignore  Application1.sln  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app1.sln  run.sh  vcpkg.json
Application1/: Application1.vcxproj  Application1.vcxproj.filters  CMakeLists.txt  ClassicHeightfieldExample.vcxproj  ClassicHeightfieldExample.vcxproj.filters  CubicNaiveMesherExample.vcxproj  CubicNaiveMesherExample.vcxproj.filters  GreedyMesherExample.vcxproj  GreedyMesherExample.vcxproj.filters  MarchingCubesExample.vcxproj  MarchingCubesExample.vcxproj.filters
Application1/src/: Application1.cpp
app1/: CMakeLists.txt  app1.vcxproj
app1/src/: main.cpp
benchmarks/: CMakeLists.txt  mesh_bench.cpp  raytracing_bench.cpp
cmake/: configure.sh
cmakeapp1/: CMakeLists.txt
cmakeapp1/src/: main.cpp
docs/: CHANGELOG.md  api-overview.md  linux.md  roadmap.md  tools_list.txt  windows.md
examples/: CMakeLists.txt  classic_heightfield_example.cpp  cubic_naive_mesher_example.cpp  effects_headless_example.cpp  greedy_mesher_example.cpp  marching_cubes_example.cpp  navigation_example.cpp  terrain_demo.cpp  voxel_showcase.cpp
include/: almond_voxel_single.hpp
include/almond_voxel/: almond_voxel.hpp  chunk.hpp  core.hpp  version.hpp  world.hpp  world_fwd.hpp
include/almond_voxel/editing/: voxel_editing.hpp
include/almond_voxel/effects/: effect_channels.hpp  particle_emitter.hpp
include/almond_voxel/generation/: noise.hpp
include/almond_voxel/material/: voxel_material.hpp
include/almond_voxel/meshing/: greedy_mesher.hpp  marching_cubes.hpp  marching_cubes_tables.hpp  mesh_types.hpp  naive_mesher.hpp  neighbors.hpp
include/almond_voxel/navigation/: voxel_nav.hpp
include/almond_voxel/raytracing/: lighting.hpp  ray_queries.hpp  structures.hpp
include/almond_voxel/serialization/: region_io.hpp
include/almond_voxel/terrain/: classic.hpp
readme/: readme.html
tests/: CMakeLists.txt  amalgamated_smoke.cpp  chunk_tests.cpp  editing_tests.cpp  meshing_tests.cpp  navigation_tests.cpp  raytracing_tests.cpp  serialization_tests.cpp  terrain_tests.cpp  test_framework.hpp  test_main.cpp  test_sources.cmake  world_tests.cpp
tools/: generate_amalgamated_header.py
